[metadata]
name = fetchers
#version = 0.1
author = KOLANICH
url = https://github.com/prebuilder/fetchers.py
description = Just a lib for fetching source code repositories and precompiled binaries from the net and putting them into FS somewhere.
long_description = file: ReadMe.md
keywords = aria2c, git, archive
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools_scm;
install_requires =
	# KOLANICH's libs, Unlicense license
	AnyVer @ git+https://github.com/prebuilder/AnyVer.py.git
	pantarei @ git+https://github.com/KOLANICH-libs/pantarei.py.git
	fsutilz @ git+https://github.com/prebuilder/fsutilz.py.git
	downloaders @ git+https://github.com/prebuilder/downloaders.py.git

	# Third-party libs
	beautifulsoup4 # MIT
	dateutil @ git+https://github.com/dateutil/dateutil # Apache-2.0
	requests @ git+https://github.com/psf/requests # Apache-2.0
	GitPython @ git+https://github.com/gitpython-developers/GitPython.git # BSD-3-Clause



[options.extras_require]
OpenPGP = OpenPGPAbs @ git+https://github.com/KOLANICH/OpenPGPAbs.py
